# simplest_ffmpeg_player

./: CMakeLists.txt
ffmpeg_test/: ffmpeg_test.cpp
include/libavutil/: ffversion.h
simplest_ffmpeg_audio_player/: simplest_ffmpeg_audio_player.cpp  simplest_ffmpeg_audio_player.vcxproj  simplest_ffmpeg_audio_player.vcxproj.filters  test.c
simplest_ffmpeg_audio_player/include/libavutil/: ffversion.h
simplest_ffmpeg_audio_player/lib/: avfilter.lib  avutil.lib  swscale.lib
simplest_ffmpeg_audio_player_speed/: simplest_ffmpeg_audio_player_speed.cpp  simplest_ffmpeg_audio_player_speed.vcxproj  simplest_ffmpeg_audio_player_speed.vcxproj.filters  sonic.h  speed.cpp  speed2.cpp  wave.cpp  wave.h
simplest_ffmpeg_audio_player_speed/lib/: avcodec.lib  avdevice.lib  avformat.lib  postproc.lib  swresample.lib
simplest_ffmpeg_decoder_pure/: simplest_ffmpeg_decoder_pure.cpp  simplest_ffmpeg_decoder_pure.vcxproj  simplest_ffmpeg_decoder_pure.vcxproj.filters
simplest_ffmpeg_decoder_pure/include/libavutil/: ffversion.h
simplest_ffmpeg_decoder_pure/lib/: avcodec.lib
simplest_ffmpeg_player/: Solution.cpp  simplest_ffmpeg_player.cpp  simplest_ffmpeg_player.sln  simplest_ffmpeg_player.vcxproj  simplest_ffmpeg_player.vcxproj.filters
